# Aquarium-Ecosystem-Simulation-using-CPP

./: Makefile  README.md
bestiole_decoratore/: Bestiole.cpp  Bestiole.h  BestioleDecorator.cpp  BestioleDecorator.h  BestioleDecoratorFactory.cpp  BestioleDecoratorFactory.h  Camouflage.cpp  Camouflage.h  Carapace.cpp  Carapace.h  CompositeBestioleFactory.cpp  CompositeBestioleFactory.h  EarsDecorator.cpp  EarsDecorator.h  EyesDecorator.cpp  EyesDecorator.h  Makefile  Milieu.cpp  Milieu.h  Nageoires.cpp  Nageoires.h  main.cpp
docs/: Grille Evaluation BE bestioles.docx  README.md  design.drawio
draft/annexe_code_alternative/: Coffee.h  coffee.cpp  main.cpp  makefile  stream_encryption.cpp
draft/coffee_decorator/: Coffee.h  CoffeeDecorator.cpp  CoffeeDecorator.h  Makefile  MilkDecorator.cpp  (+6 more)
gtest/: README.md
gtest/config/: CMakeLists.txt
gtest/config/tests/: test_config.cpp
gtest/example/: CMakeLists.txt
gtest/example/include/: math_ops.h
gtest/example/src/: math_ops.cpp
gtest/example/tests/: test_math_ops.cpp
include/: Aquarium.h  Bestiole.h  BestioleBehavior.h  BestioleDecorator.h  BestioleFactory.h  BirthDeathHandler.h  CamouflageDecorator.h  EarsDecorator.h  EyesDecorator.h  FinsDecorator.h  Milieu.h  PlainBestiole.h  ShellDecorator.h  UImg.h  config.h  utils.h
src/: Aquarium.cpp  Bestiole.cpp  BestioleBehavior.cpp  BestioleDecorator.cpp  BestioleFactory.cpp  BirthDeathHandler.cpp  CamouflageDecorator.cpp  EarsDecorator.cpp  EyesDecorator.cpp  FinsDecorator.cpp  Milieu.cpp  PlainBestiole.cpp  ShellDecorator.cpp  config.cpp  main.cpp  utils.cpp
(+71 files in other folders)
